outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval-2396649405900560167_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, using a dynamic weight system that prioritizes connectivity and centrality based on the problem's progress, while incorporating a novel "anticipation factor" that estimates future path potential and applies a context-sensitive penalty to nodes that disrupt connectivity or increase future path lengths.}
                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, using a dynamic weight system that prioritizes connectivity and centrality based on the problem's progress, while incorporating a novel "anticipation factor" that estimates future path potential and applies a context-sensitive penalty to nodes that disrupt connectivity or increase future path lengths.}
                                                                                                               ^
SyntaxError: unterminated string literal (detected at line 1)
